# kipper

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
apps/cli/: CMakeLists.txt  main.cpp
include/kipper/: kipper.hh
src/: CMakeLists.txt  allocator.cpp  allocator.hh  api.cpp  ast.cpp  ast.hh  ast_print.cpp  ast_print.hh  compiler.cpp  compiler.hh  completion.hh  context.cpp  context.hh  conversion-inl.hh  conversion.hh  gc.cpp  gc.hh  handle.cpp  handle.hh  heap.cpp  heap.hh  interpreter.cpp  interpreter.hh  kipper.cpp  kipper.hh  list.hh  location.hh  log.hh  message.hh  parser.cpp  parser.hh  reference.cpp  reference.hh  runtime.cpp  runtime.hh  scanner.cpp  scanner.hh  space.cpp  space.hh  symbol_table.cpp  (+6 more)
tests/: CMakeLists.txt
tests/cpptest/: CMakeLists.txt  runkstestmain.cpp  unittest.cpp  unittest.hh  value_test.cpp
tests/kstest/: array.ks  demo.ks  function.ks  gc_loop.ks  object.ks  print.ks  string.ks
